# Chromosomer

./: pyproject.toml  requirements.txt  setup.py
docs/: conf.py
src/chromosomer/: __init__.py  __main__.py  cli.py  exception.py  fragment.py  shims.py  transfer.py
src/chromosomer/wrapper/: blast.py
tests/: test_fragment.py  test_shims.py  test_simulator.py  test_wrapper.py
tests/data/shim_test/: simple.vcf
