[project]
name = "chromosomer"
version = "0.1.5"
description = "Reference-assisted chromosome assembly tool"
authors = [
    { name = "Gaik Tamazian", email = "gaik.tamazian@gmail.com" }
]
dependencies = [
    "future",
    "pyfaidx>=0.8.1.1",
    "numpy>=1.24.4",
    "vcfpy>=0.6.8",
    "biopython>=1.83",
    "bcbio-gff>=0.7.1",
    #"bioformats @ git+https://github.com/yqwu1983/bioformats.git",
]
readme = "README.rst"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
chromosomer = "chromosomer.cli:chromosomer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "nose>=1.3.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chromosomer"]
